# Haskell

./: LICENSE  README.md
Fliperama/: CHANGELOG.md  Fliperama.cabal  README.md
Fliperama/.stack-work/: stack.sqlite3
Fliperama/src/: Main.hs  Tipos.hs
Fliperama/src/JogoDaVelha/: Jogada.hs  Main.hs  Resultados.hs
Fliperama/src/Sudoku/: Main.hs  Sudoku.hs  Validacao.hs
Fliperama/test/: Testes.hs
JogoDaVelha-Haskell/: README.md
JogoDaVelha-Haskell/primeiro-projeto/: CHANGELOG.md  primeiro-projeto.cabal
JogoDaVelha-Haskell/primeiro-projeto/.stack-work/: stack.sqlite3
JogoDaVelha-Haskell/primeiro-projeto/src/: Jogada.hs  Main.hs  Resultados.hs  Tipos.hs
Sudoku/sudoku/: stack.yaml  sudoku.cabal
Sudoku/sudoku/.stack-work/: stack.sqlite3
Sudoku/sudoku/src/: Main.hs  Sudoku.hs  Tipos.hs  Validacao.hs
Teste/: teste.hi  teste.hs
pre-quiz3/: main.hs
pre-quiz4/: quiz4.hs  resumo.md
pre-quiz5/: pre-quiz5.hs
pre-quiz7/: pre-quiz7.hs
tetris_i/tetris_i/: ProjetoFinal.cabal  README.md
tetris_i/tetris_i/.stack-work/: stack.sqlite3
tetris_i/tetris_i/documentacao/: Database.html  Desenhos.html  Main.html  doc-index.html  doc-index.json  index.html
tetris_i/tetris_i/documentacao/src/: Database.html  Desenhos.html  Main.html
tetris_i/tetris_i/src/: Database.hs  Desenhos.hs  Main.hs
tradutor/: CHANGELOG.md  README.md  tradutor.cabal
tradutor/.stack-work/: stack.sqlite3
tradutor/src/: Dicionario.hs  Main.hs  Tradutor.hs
