cabal-version:       2.2

name:                tradutor
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/arthur-sena
license:             BSD-3-Clause
license-file:        LICENSE
author:              Arthur Sena
maintainer:          arthur.sena@aluno.ufabc.edu.br
copyright:           2024 Arthur Sena
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable tradutor
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, containers
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
  other-modules:       tradutor