cabal-version:       2.2

name:                primeiro-projeto
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/primeiro-projeto#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2024 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable primeiro-projeto
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, random
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -rtsopts -Wall -threaded -O2
  other-modules:       Tipos
                     , Resultados
                     , Jogada
